fixed website structure; started collapsable design;

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,15 +37,16 @@ p {
 }
 
 header {
-	height: 70px;
 	width: 100%;
 	background: url("../img/bg-darkGrey.png");
-	box-shadow: 0px 50px 10px #000;
+	box-shadow: 0 0 20px #000;
+	position: relative;
+	z-index: 2;
 }
 
 nav {
-	padding-top: 26px;
-	margin-left: 300px;
+	vertical-align: middle;
+	display: inline-block;
 }
 
 nav > ul > li {
@@ -63,33 +64,75 @@ footer {
 	background: url("../img/bg-darkGrey.png");
 }
 
+/*********** CLASSES ************/
+
 .container {
-	width: 1280px;
+	max-width: 1280px;
 	margin: 0 auto;
-}
-
-#mainHeading {
-	color: #ec5e46;
-	font-size: 60px;
 	padding: 5px;
-	float: left;
-}
-
-#headerActions {
-	float: right;
 	position: relative;
-	bottom: 34px;
 }
 
-#boxButton {
+.boxButton {
 	border-radius: 10px;
 	border: 1px solid #46d4ec;
 	font-size: 24px;
 	color: #46d4ec;
-	padding: 4px 8px;
+	padding: 6px 8px 4px 8px;
 }
 
-#carousel {
+.pkg-item {
+	width: 300px;
+	background-color: rgba(0,0,0,0.3);
+	display: inline-block;
+	margin-right: 20px;
+	text-align: left;
+}
+
+.cta-heading {
+	font-size: 34px;
+	display: inline-block;
+	vertical-align: middle;
+}
+
+.positives-item {
+	height: 620px;
+	width: 400px;
+	margin: 0 auto;
+	display: inline-block;
+}
+
+/*********** IDENTIFIERS ************/
+
+#mainHeading {
+	color: #ec5e46;
+	font-size: 60px;
+	vertical-align: middle;
+	display: inline-block;
+}
+
+#loginarea {
+	display: inline-block;
+	position: absolute;
+	right: 0;
+	padding: 12px 0 0 0;
+}
+
+#loginarea p {
+	display: inline-block;
+}
+
+#logIn {
+	border: 1px solid #e5e5e5;
+	color: #e5e5e5;
+}
+
+#or {
+	font-size: 20px;
+	color: #e5e5e5;
+}
+
+#carousel-section {
 	height: 530px;
 	background: url("../img/peak.png") 50% 80% no-repeat;
 	background-size: cover;
@@ -97,14 +140,22 @@ footer {
 }
 
 #callToAction1 {
-	height: 60px;
 	background: url("../img/bg-darkGrey.png");
+	text-align: center;
+	padding: 5px;
 }
 
-#positives {
-	height: 620px;
+#startNow-CTA {
+	font-size: 30px;
+	display: inline-block;
+	vertical-align: middle;
+	margin-left: 20px;
+}
+
+#positives-section {
 	background: url("../img/cliff.png") no-repeat center;
 	background-size: cover;
+	text-align: center;
 }
 
 #callToAction2 {
@@ -112,19 +163,13 @@ footer {
 	background: url("../img/bg-darkGrey.png");
 }
 
-#packages {
-	height: 680px;
+#packages-section {
 	background: url("../img/sunset_skyline.png") 50% 40% no-repeat;
 	background-size: cover;
+	text-align: center;
 }
 
-#pkg {
-	height: 600px;
-	width: 300px;
-	background-color: rgba(0,0,0,0.3);
-	float: left;
-	margin-right: 20px;
-}
+/*********** MOBILE FORMATTING ************/
 
 /* Small monitor size */
 @media (max-width: 1280px) {
